Correct slightly misaligned possession hint window

--- a/main.css
+++ b/main.css
@@ -145,7 +145,7 @@ a img:hover {
   position: absolute;
   border-top: #384f88 3px solid;
   border-radius: 5px;
-  margin: 3px 5px 0 5px;
+  margin: 3px 5px 0 -5px;
   z-index: 1000;
   box-shadow: rgba(0, 0, 0, 0.4) 0 4px 4px;
 }
